syntax = "proto3";

option go_package = "pb/gen";

package ukama.org.v1;

import "validator.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


service OrgService {
    /* Orgs */
    rpc Add(AddRequest) returns (AddResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetByOwner(GetByOwnerRequest) returns (GetByOwnerResponse);

    /* Orgs */
    rpc AddMember(AddMemberRequest) returns (AddMemberResponse);
}

message AddRequest{
    Organization org = 1 [(validator.field) = {msg_exists : true}];
}

message AddResponse{
    Organization org = 1;
}

message GetRequest {
    uint64 id = 1;
}

message GetResponse{
    Organization org = 1;
}

message GetByOwnerRequest{
    string userUuid = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
}

message GetByOwnerResponse{
    string owner = 1 [(validator.field) = {uuid_ver: 0}];
    repeated Organization orgs = 2;
}

message AddMemberRequest{
    uint64 orgId = 1;
    string userUuid = 2 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
}

message AddMemberResponse{
  OrgUser member = 1;
}

message Organization {
    uint64 id = 1;
    string name = 2 [(validator.field) = {string_not_empty: true}]; // there is extra vlidation on repository level
    string owner = 3 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
    string certificate = 4;
    bool isDeactivated = 5;
    google.protobuf.Timestamp created_at = 6;
}

message OrgUser {
    uint64 orgId = 1;
    uint64 userId = 2;
    string uuid = 3 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
    bool isDeactivated = 4;
    google.protobuf.Timestamp created_at = 5;
}
